manifests/30-network/cilium-policies.yaml
# K05, K08 - Cilium policies
---
# K05
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deathstar-l7
  namespace: star-wars
spec:
  description: "K05: empire endpoints may request landing; nobody may touch the exhaust port"
  endpointSelector:
    matchLabels:
      org: empire
      class: deathstar
  ingress:
    - fromEndpoints:
        - matchLabels:
            org: empire
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http:
              - method: "POST"
                path: "/v1/request-landing"
---
# K05
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: clients-egress-to-deathstar
  namespace: star-wars
spec:
  description: "K05: client endpoints may open a connection to the deathstar service"
  endpointSelector:
    matchExpressions:
      - key: class
        operator: In
        values:
          - tiefighter
          - xwing
  egress:
    - toEndpoints:
        - matchLabels:
            org: empire
            class: deathstar
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
---
# K08: enableDefaultDeny stays false or this becomes a cluster-wide egress deny
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: deny-cloud-metadata
spec:
  description: "K08: no endpoint may reach the cloud instance metadata service"
  endpointSelector: {}
  enableDefaultDeny:
    egress: false
    ingress: false
  egressDeny:
    - toCIDR:
        - 169.254.169.254/32
